--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "lodash": "^4.17.21",
     "next": "12.0.7",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-media": "^1.10.0"
   },
   "devDependencies": {
     "eslint": "8.4.1",
